--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,4 +9,4 @@ app.client.host=http://localhost:9091
 #Database
 spring.datasource.username=jodos
 spring.datasource.password=jodos
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_system?useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_system4?useSSL=false
